Translated Upgrade manual

--- a/_posts/ru/2015-07-09-updating.md
+++ b/_posts/ru/2015-07-09-updating.md
@@ -8,9 +8,9 @@ order: 4
 
 # Обновление
 
-If you followed the procedure to install Gitify from Git, updating Gitify to a newer version is a breeze.
+Если вы устанавливали Gitify через Git, то обновление до новой версии сущий пустяк.
 
-Just pull in the latest changes, rerun composer in case anything changed with regards to the dependencies, and off you go.
+Просто стяните последние обновления из репозитория, перезапустите Composer на случай, если изменились какие-то зависимости и все на этом. 
 
 ```bash
 cd /path/to/Gitify/
@@ -18,12 +18,12 @@ git pull
 composer install
 ```
 
-## Dealing with breaking changes
+## Действия в случае критических изменений
 
-Especially in early releases, it's not uncommon for breaking changes to occur. These changes might be related to how the files get written - or read - and can break your workflow. Any potentially breaking changes are tagged with `[BC]` in [the changelog](https://github.com/modmore/Gitify/blob/master/CHANGELOG.md).
+Не редки были ситуации серьезных изменений в коде, особенно в ранних релизах. Эти изменения могут быть связаны с тем, как файлы записывались или читались и могут сломать ваш рабочий процесс и окружение. Все потенциальные критические правки помечены знаком `[BC]` в [списке изменений](https://github.com/modmore/Gitify/blob/master/CHANGELOG.md).
 
-The easiest way to deal with changes like this is to make sure that, before updating, there are no differences between your data files and the database. So extract or build before updating.
+Самый простой путь работы с изменениями, подобным описанным, это убедиться, что перед обновлением у вас нет различий между данными в файлах и в базе данных. Так что выполните команды exctact или build перед обновлением.
 
-After the update, extract again so files are written anew and are compatible with whatever changed in the new release. Otherwise you may not be able to build later.
+После обновления снова выполните команду extract, чтобы заново записанные файлы были совместими с любыми изменениями в новой версии. В противном случае вы потом не сможете собрать сайт из файлов.
 
-Remember to update all your Gitify installs (local, staging and production) as close to each other as possible to be safe from changes between versions. It's also possible to install Gitify into your project files (as git submodule - tho we might add it to composer later), so you have a copy of Gitify local to the project, but then you lose the ability to run it anywhere.
+Не забывайте обновлять все установленные версии Gitify (локальную, на stage и на production серверах) до минимальных различий в версиях, насколько это возможно, чтобы избежать проблем совместимости, описанных выше. Так же можно установить Gitify в ваш проект (как git submodule - можно потом добавить в composer), в итоге вы получите копию Gitify прямо в вашем проекте, но потеряете возможность запускать его из любого места.
