--- a/_posts/ru/2015-07-09-extract.md
+++ b/_posts/ru/2015-07-09-extract.md
@@ -8,14 +8,14 @@ order: 2
 
 # gitify extract
 
-Used to read stuff from the MODX database, and turn it into majestic YAML data files. 
+Используется для сбора данных из базы данных MODX и вставки в магические YAML файлы с данными.
 
-```
-Usage:
+```bash
+Использование:
  extract
 
-Options:
- --help (-h)           Display this help message.
- --verbose (-v|vv|vvv) Increase the verbosity of messages: 1 for normal output, 2 for more verbose output and 3 for debug.
- --version (-V)        Display the Gitify version.
+Опции:
+ --help (-h)           Показывает документацию по команде.
+ --verbose (-v|vv|vvv) Увеличивает информативность сообщений: 1 - для обычного вывода, 2 - для более подробного вывода и 3 - для дебага.
+ --version (-V)        Показывает версию Gitify.
 ```
