--- a/_posts/ru/2015-07-09-init.md
+++ b/_posts/ru/2015-07-09-init.md
@@ -10,7 +10,7 @@ order: 0
 
 Используется для создания файла `.gitify` в папке проекта. Позволяет в интерактивном режиме настроить конфигурацию, а так же предлагает установить MODX, если это еще не сделано.
 
-__Ниже вывод команды с параметром `--help`, в консоли будет все на английском. Здесь переведено для лучшего понимания.__
+_Ниже вывод команды с параметром `--help`, в консоли будет все на английском. Здесь переведено для лучшего понимания._
 
 ```bash
 Использование:
