--- a/_posts/ru/2015-07-09-backup.md
+++ b/_posts/ru/2015-07-09-backup.md
@@ -10,6 +10,8 @@ order: 3
 
 Появилась в версии 0.7. Создает полную резервную копию базы данных MySQL. Резервная копия будет записана в папку, заданную в параметре `backup_directory` в вашем файле `.gitify`. 
 
+_Ниже вывод команды с параметром `--help`, в консоли будет все на английском. Здесь переведено для лучшего понимания._
+
 ```bash
 Использование:
  backup [name]
