--- a/_posts/ru/2015-07-09-extract.md
+++ b/_posts/ru/2015-07-09-extract.md
@@ -10,6 +10,8 @@ order: 2
 
 Используется для сбора данных из базы данных MODX и вставки в магические YAML файлы с данными.
 
+_Ниже вывод команды с параметром `--help`, в консоли будет все на английском. Здесь переведено для лучшего понимания._
+
 ```bash
 Использование:
  extract
