--- a/_posts/ru/2015-07-09-restore.md
+++ b/_posts/ru/2015-07-09-restore.md
@@ -8,19 +8,19 @@ order: 4
 
 # gitify restore
 
-Added in 0.7. Restores your MySQL database from a backup created with `Gitify backup`. Specify "last" to use the most recent backup. 
+Появилась в версии 0.7. Восстанавливает вашу базу данных MySQL из бекапа, созданного командой `Gitify backup`. Укажите имя "last", чтобы восстановить самый актуальный бекап. 
 
-```
-Usage:
+_Ниже вывод команды с параметром `--help`, в консоли будет все на английском. Здесь переведено для лучшего понимания._
+
+```bash
+Использование:
  restore [file]
 
-Arguments:
- file                  The file name of the backup to restore; if left empty you will be provided a list of available backups. Specify "last" to use the last backup, based on the file modification time.
+Аргументы:
+ file                  Имя файла бекапа для восстановления; если оставить пустым, вам будет показан список доступных бекапов. Укажите "last", чтобы использовать последний бекап, учитывается время модификации файла.
 
-Options:
- --help (-h)           Display this help message.
- --verbose (-v|vv|vvv) Increase the verbosity of messages: 1 for normal output, 2 for more verbose output and 3 for debug.
- --version (-V)        Display the Gitify version.
-
+Опции:
+ --help (-h)           Показывает документацию по команде.
+ --verbose (-v|vv|vvv) Увеличивает информативность сообщений: 1 - для обычного вывода, 2 - для более подробного вывода и 3 - для дебага.
+ --version (-V)        Показывает версию Gitify.
 ```
-
