--- a/_posts/ru/2015-07-09-build.md
+++ b/_posts/ru/2015-07-09-build.md
@@ -8,23 +8,21 @@ order: 1
 
 # gitify build
 
-`$ Gitify build`
+Используется для чтения файлов с данными и записи их в базу данных. Учтите, что команда читает файл `.gitify`, чтобы видеть, что нужно собрать; она не пытается тупо записать все, что найдет.
 
-Used to read the data files, and write them to the MODX database. Note that this reads the `.gitify` file to see what needs to be built; it doesn't blindly try to write any file it encounters.  
+С версии 0.9 `Gitify build` автоматически очищает все удаленные объекты, которые есть. Удаленный объект - это такой объект, который есть в базе данныз, но его уже нет в файлах gitify. Это работает как с ресурсами, так и с другими объектами. Чтобы отключить такую очистку, добавьте к вызову флаг `--no-cleanup`. До верии 0.9 нужно было использовать атрибут `--force`, чтобы быть уверенным, что база данных полностью соответствует данным в файлах.
 
-As of v0.9, `Gitify build` automatically cleans up any orphaned objects it encounters. An orphaned object is an object that exists in the database, but not in the gitify files. This works on both resources and other objects. To disable orphan handling, include the `--no-cleanup` flag. Before v0.9, you had to use the `--force` attribute to ensure the database matched the files exactly. 
+Так же с версии 0.9 `Gitify build` автоматически пытается решить проблему дублирования id и первичных ключей для контента и других объектов. Когда находится объект, первичный ключ которого (обычно это ID) уже существует, этот объект временно сохраняется в памяти. После полного завершения остальной сборки, включающей очистку, будет произведена попытка разрешить этот конфликт. В случае перемещения или переименования объекта/ресурса, благодаря очистке "старый" объект будет удален, в результате чего новый будет вставлен правильно. Если же конфликт на самом деле есть (возможно два разработчика добавили новый ресурс или объект в разных ветках), сохраненный в памяти объект будет вставлен с новым ID. Так же в этом случае для него будет запущена команда `Gitify extract`.
 
-Also as of v0.9, `Gitify build` automatically tries to resolve duplicate id/primary key conflicts for both content and other objects. Whenever it finds an object of which the real primary key (typically the ID) already exists, it will temporarily keep that object in memory. After completing the rest of the build, including the orphans clean up, it will attempt to resolve the conflict. In the case of a moved or renamed object/resource, the orphan clean up will have removed the "old" object by then, in which case the object will be inserted normally. If there is a genuine conflict (perhaps two developers added a new resource or object in separate branches), it will insert the object with a new auto incremented ID. It will also execute a `Gitify extract` in that case. 
-
-```
-Usage:
+```bash
+Использование:
  build [--skip-clear-cache] [-f|--force] [--no-backup]
 
-Options:
- --skip-clear-cache    When specified, it will skip clearing the cache after building.
- --force (-f)          When specified, all existing content will be removed before rebuilding. Can be useful when having dealt with complex conflicts.
- --no-backup           When using the --force attribute, Gitify will automatically create a full database backup first. Specify --no-backup to skip creating the backup, at your own risk.
- --help (-h)           Display this help message.
- --verbose (-v|vv|vvv) Increase the verbosity of messages: 1 for normal output, 2 for more verbose output and 3 for debug.
- --version (-V)        Display the Gitify version.
+Опции:
+ --skip-clear-cache    Если задан, не будет очищаться кеш после сборки.
+ --force (-f)          Если задан, все содержимое сайта будет удалено перед сборкой. Может быть полезно, когда очень много конфликтов.
+ --no-backup           Если используется атрибут --force, Gitify сначала автоматически создаст полный бекап базы данных. Указание --no-backup отменяет создание бекапа, но это на свой страх и риск.
+ --help (-h)           Показывает документацию по команде.
+ --verbose (-v|vv|vvv) Увеличивает информативность сообщений: 1 - для обычного вывода, 2 - для более подробного вывода и 3 - для дебага.
+ --version (-V)        Показывает версию Gitify.
 ```
