--- a/_posts/en/2015-07-09-backup.md
+++ b/_posts/en/2015-07-09-backup.md
@@ -10,7 +10,7 @@ order: 3
 
 Added in 0.7. Creates a backup of your full MySQL database. The backup will be written to the directory specified by the `backup_directory` option in your `.gitify` file. 
 
-```
+```bash
 Usage:
  backup [name]
 
