--- a/_posts/en/2015-07-09-extract.md
+++ b/_posts/en/2015-07-09-extract.md
@@ -10,7 +10,7 @@ order: 2
 
 Used to read stuff from the MODX database, and turn it into majestic YAML data files. 
 
-```
+```bash
 Usage:
  extract
 
