--- a/_posts/en/2015-07-09-init.md
+++ b/_posts/en/2015-07-09-init.md
@@ -10,7 +10,7 @@ order: 0
 
 Used to create a `.gitify` file in the current directory. Interactively allows you to set up a basic configuration, and also prompts to install MODX if it's not yet present.
 
-```
+```bash
 Usage:
  init [--overwrite]
 
