--- a/_posts/en/2015-07-09-restore.md
+++ b/_posts/en/2015-07-09-restore.md
@@ -10,7 +10,7 @@ order: 4
 
 Added in 0.7. Restores your MySQL database from a backup created with `Gitify backup`. Specify "last" to use the most recent backup. 
 
-```
+```bash
 Usage:
  restore [file]
 
